# snproxy

./: CLAUDE.md  Cargo.toml  README.md  flake.nix
.opencode/skills/snproxy-data-investigation/: SKILL.md
.opencode/skills/snproxy-record-management/: SKILL.md
.opencode/skills/snproxy-script-development/: SKILL.md
.opencode/skills/snproxy-ticket-handling/: SKILL.md
docs/: artifacts.md  browser.md  context.md  protocol.md  records.md  rest.md  scripts.md
sncli/: Cargo.toml
sncli/src/: main.rs
sncore/: Cargo.toml
sncore/src/: client.rs  lib.rs  schema_cache.rs  types.rs
snpipe/: Cargo.toml
snpipe/src/: ast.rs  error.rs  main.rs  parser.rs
snpipe/src/eval/: context.rs  coverage.rs  expr.rs  fetch.rs  input.rs  mod.rs  resolve.rs  transform.rs
snpipe/src/output/: csv.rs  json.rs  mod.rs  table.rs
snpipe/src/tui/: mod.rs  widgets.rs
snstate/: Cargo.toml
snstate/src/: main.rs
sntui/: Cargo.toml  sntui.example.toml
sntui/src/: app.rs  client.rs  column_config.rs  config.rs  main.rs  tables.rs  ui.rs
src/: main.rs  state.rs  ws.rs  ws_protocol.rs
src/api/: artifacts.rs  browser.rs  context.rs  events.rs  health.rs  mod.rs  raw.rs  records.rs  rest.rs  scripts.rs
