[workspace]
members = ["sncli"]
resolver = "2"

[package]
name = "snproxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "snproxy"
path = "src/main.rs"

[dependencies]
axum             = { version = "0.7", features = ["macros"] }
tokio            = { version = "1",   features = ["full"] }
tokio-tungstenite = "0.23"
tokio-stream     = { version = "0.1", features = ["sync"] }
futures-util     = "0.3"
serde            = { version = "1",   features = ["derive"] }
serde_json       = "1"
clap             = { version = "4",   features = ["derive"] }
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
