[package]
name = "sncli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sncli"
path = "src/main.rs"

[dependencies]
anyhow        = "1"
clap          = { version = "4", features = ["derive", "env"] }
futures-util  = "0.3"
reqwest       = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde_json    = "1"
tokio         = { version = "1", features = ["full"] }
