[package]
name = "snpipe"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "snpipe"
path = "src/main.rs"

[dependencies]
sncore     = { path = "../sncore" }
ratatui    = "0.29"
crossterm  = "0.28"
tokio      = { version = "1", features = ["full"] }
serde_json = "1"
clap       = { version = "4", features = ["derive", "env"] }
csv        = "1"
regex      = "1"
thiserror  = "1"
futures    = "0.3"
