[package]
name = "snstate"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "snstate"
path = "src/main.rs"

[dependencies]
anyhow       = "1"
clap         = { version = "4", features = ["derive", "env"] }
reqwest      = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json   = "1"
toml         = "0.8"
tokio        = { version = "1", features = ["full"] }
